ente-photos/ente-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: museum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ente
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ente
    spec:
      containers:
        - env:
          - name: ENTE_CREDENTIALS_FILE
            value: /credentials.yaml
          image: ghcr.io/ente-io/server
          name: museum
          command: [ "sh", "-c"]
          # loop forever, outputting "yo" every 5 seconds
          args: ["while true; do echo 'yo' && sleep 5; done;"]
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 2112
              protocol: TCP
          volumeMounts:
            - name: credentials
              mountPath: /credentials.yaml
              readOnly: true
            - mountPath: /var/logs
              name: custom-logs
            - mountPath: /museum.yaml
              name: museum-claim1
              readOnly: true
            - mountPath: /data
              name: museum-claim3
              readOnly: true
        # - args:
        #     - TCP-LISTEN:3200,fork,reuseaddr
        #     - TCP:minio:3200
        #   image: alpine/socat
        #   name: socat
      restartPolicy: Always
      volumes:
        - name: credentials
          secret:
            secretName: ente-photos-config
        - name: custom-logs
          persistentVolumeClaim:
            claimName: custom-logs
        - name: museum-claim1
          persistentVolumeClaim:
            claimName: museum-claim1
            readOnly: true
        - name: museum-claim3
          persistentVolumeClaim:
            claimName: museum-claim3
            readOnly: true
