ente-photos/ente-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ente-web-service
spec:
  ports:
    - name: https
      port: 3000
      targetPort: 3000
  selector:
    app: ente-web
