ente-photos/ente-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ente-web-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: prod-cluster-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  namespace: ente-photos
spec:
  ingressClassName: nginx
  rules:
  - host: ente.hensen.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ente-service
            port: 
              name: "https"
            
  # TLS configuration for HTTPS
  tls:
    # TLS secretName used on ClusterIssuer
    - secretName:  letsencrypt-prod2
      hosts:
        - ente.hensen.io
